--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,16 @@
 spring:
   application:
     name: trunkk
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/tree?createDatabaseIfNotExist=true
+    username: root
+    password: 9027707502
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    show-sql: true
+    database-platform: org.hibernate.dialect.MySQLDialect
+    hibernate:
+      ddl-auto: update
+
