--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: trunkk
+    name: expense Tracker
 
   datasource:
     url: jdbc:mysql://localhost:3306/tree?createDatabaseIfNotExist=true
